# claude-code-delegate-local

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.es.md  README.md  main.py  pyproject.toml  server.py
docs/: ARCHITECTURE.md  BEST-PRACTICES.md  CONFIGURATION.md  EXAMPLES.md  TROUBLESHOOTING.md
examples/: claude-glm.sh  claude-m.sh  litellm.example.yaml
tests/: test_hardening.py  test_streaming.py
