[project]
name = "claude-delegate-local"
version = "0.7.0"
description = "MCP server that delegates Claude Code subagents to alternative backends (local llama.cpp, LiteLLM, DeepSeek, Bedrock, etc.) with full tool calling."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.4.4",
    "httpx>=0.28.1",
]
